Fix newsletter on dark mode

--- a/_sass/article.scss
+++ b/_sass/article.scss
@@ -25,6 +25,11 @@
     clear:left; 
     font:14px -apple-system,Helvetica,Arial,sans-serif; 
     width:100%;
+    margin-bottom: 4px !important;
+}
+
+#mc_embed_signup input.email {
+    margin-right: 6px !important;
 }
 
 #postHeader {
