--- a/_sass/themes.scss
+++ b/_sass/themes.scss
@@ -157,4 +157,12 @@
      blockquote p {
          opacity: 0.5 !important;
      }
+
+     #mc_embed_signup {
+        background: #2c2d2f !important;
+     }
+
+     #mc_embed_signup input.email {
+        background-color: #2c2d2f !important;
+     }
  }
